Fixed minor typographical errors

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
@@ -12,7 +12,7 @@
 Editors</h3>
 <P CLASS="Para">
  Depending on the type of file you are editing, the appropriate editor is
-displayed in the editor area. For example, if you are editing a .TXT file, a text editor displays in the editor area.
+displayed in the editor area. For example, if you are editing a .TXT file, a text editor is displayed in the editor area.
 The figure below shows an editor open on the file <i>sample.txt</i>.&nbsp; The
 name of the file appears in the tab of the editor. If an asterisk (*) appears at
 the left side of the tab this indicates that the editor has unsaved changes. If
@@ -24,7 +24,7 @@ will be prompted to save your editor's changes.</P>
 
 <p class="Para">When an editor is active the Workbench menu bar and toolbar contain 
   operations applicable to the editor. When a view becomes active, the editor 
-  operations are disabled. However, in some cases, certain editor may be appropriate 
+  operations are disabled. However, certain operations may be appropriate 
   in the context of a view and will remain enabled.</p>
 
 
@@ -47,7 +47,7 @@ later in this tutorial.</P>
   in the toolbar and by using the Ctrl+F6 accelerator. The arrow buttons move 
   through the last mouse selection points and allow you to potentially move through 
   several points in a file before moving to another one. Ctrl+F6 pops up a list 
-  of currently selected editors with editor used before the current one selected 
+  of currently selected editors with the editor used before the current one selected 
   by default.</P>
 <P><img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="49" height="13"> 
   On Windows the Workbench will also attempt to launch the editor in-place as 
