--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -44,10 +44,9 @@ for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
 <P CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image7_view_pulldown.jpg" alt="Navigator view menu, arrow pulldown" width="333" height="250" ></P>
 <P CLASS="Para">&nbsp;</P>
 <P CLASS="Para">
- In the event
- you decided to experiment by rearranging your Workbench, this is probably a
- good opportunity to use the Perspective &gt; Reset menu operation. The reset
-operation restores the layout&nbsp; to its original state.&nbsp;</P>
+ If you decided to experiment by rearranging your Workbench, this is probably a
+ good opportunity to use the Window &gt; Reset Perspective menu operation. The reset
+operation restores the layout to its original state.</P>
 <P CLASS="Para">
 You can display a view by selecting it from the Window &gt; Show View
 menu. A perspective determines the views you are likely to need and shows these on the
