--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -24,7 +24,7 @@ operating system's color scheme).</P>
       toolbar.</P>
   </li>
   <li>
-<P CLASS="Para">In the Goto Resource dialog type&nbsp; &quot;JanesF&quot; into
+<P CLASS="Para">In the Go To Resource dialog type &quot;JanesF&quot; into
 the <i>Pattern </i>field at the top of the dialog.</P>
 <P CLASS="Para">As you type the filename the dialog filters the set of possible
 matches based on what you have entered so far.</P>
