--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
@@ -21,20 +21,20 @@ operating system's color scheme).</P>
   </li>
   <li>
 <p CLASS="Para">
-Select the JaneQUser project.</p>
+Select the JaneQuser project.</p>
   </li>
   <li>
 <P CLASS="Para">
 Choose Go Into from the popup menu.</P>
   </li>
   <li>
-<p CLASS="Para">The Navigator now shows only the contents of JaneQUserProject.
+<p CLASS="Para">The Navigator now shows only the contents of the JaneQuser project.
 The title of the Navigator shows the name of the resource you are currently
 looking at.</p>
 <p CLASS="Para"><img align="texttop" border="0" src="../images/Image31_go_into.jpg" alt="Navigator view" width="208" height="245"></li>
   <li>
 <P CLASS="Para">You can use the back, forward and up buttons <img align="texttop" border="0" src="../images/Image33_into_buttons.jpg" alt="into buttons" width="74" height="21">
-to move between showing all resources and showing&nbsp; only the JaneQUser
+to move between showing all resources and showing only the JaneQuser
 project. </P>
 <P CLASS="Para">Click the back button to show all of the
 resources.&nbsp; </P>
