--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
@@ -22,7 +22,7 @@ Exporting files </h2>
     and pasting to the file system,
     or</li>
   <li>
-    using the export wizard.</li>
+    using the Export wizard.</li>
 </ul>
 
 
