--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
@@ -24,9 +24,9 @@ Open your operating system's file system explorer.</P>
 Drag the file JanesFile.txt from the Navigator to the file system explorer.</P>
   </li>
   <li>
-    <P CLASS="Para"> Notice that the file is moved to the destination in the file 
-      system. You can do a copy instead of a move by selecting Alt before you 
-      drag. </P>
+    <P CLASS="Para"> Notice that the file is copied to the destination in the file 
+      system. You can do a move instead of a move by selecting Shift before or during the
+      drag.</P>
   </li>
   <li>
 <p CLASS="Para">
