--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -19,7 +19,7 @@ You can import files into the Workbench either by :</P>
     <img align="texttop" border="0" src="../images/win_only.gif" alt="Windows only" width="51" height="13">
     copy and pasting from the file system, or</li>
   <li>
-     Using the import wizard.&nbsp;</li>
+     Using the Import wizard.&nbsp;</li>
 </ul>
 <p CLASS="Para">
 In this section we will import the two files we just exported and place them
