--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -24,7 +24,7 @@ the third alternative, the New button.</P>
 <img align="texttop" border="0" src="../images/Image16_new_pulldown.jpg" alt="New Wizard Pulldown" width="171" height="137"></P>
   </li>
   <li>
-    <P CLASS="Para"> In the New File wizard, your folder's name and path already&nbsp; 
+    <P CLASS="Para"> In the New File wizard, your folder's name and path already
       appear by default in the <i> Enter or select the parent folder </i> field. 
       This is because you chose to create the new file while this folder was selected 
       in the Navigator view and the view was active.</P>
@@ -60,7 +60,7 @@ the filename. The asterisk indicates that the editor has unsaved changes.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the Workbench window's toolbar, click the Save button <img align="texttop" border="0" src="../images/Image17_save_button.jpg" alt="Save Button" width="21" height="20"> to save&nbsp;
+In the Workbench window's toolbar, click the Save button <img align="texttop" border="0" src="../images/Image17_save_button.jpg" alt="Save Button" width="21" height="20"> to save
 your work.</P>
   </li>
   <li>
@@ -78,8 +78,8 @@ which has the same effect as choosing File &gt; New &gt; Other...&nbsp;</P>
 <P CLASS="Para">
 In the New wizard, click Simple in the left pane, and in the right pane, click File. Then click Next.&nbsp;</P>
   </li>
-  <li>Once again, your folder's name and path appears by default in the <i> Enter or select the folder
-</i> field.&nbsp; </li>
+  <li>Once again, your folder's name and path appears by default in the <i> Enter or select the parent folder
+</i> field.</li>
   <li>
 <P CLASS="Para">
 In the <i> File name </i> field, type a unique name for an .ini file. Do not use any spaces or special characters in the file name (e.g., &quot;JanesINIFile.ini&quot;). Click Finish when you are done.</P>
@@ -103,11 +103,11 @@ closely you can also see a second, inactive editor tab, &quot;Welcome&quot;.&nbs
 
 
 <P>Click on the Welcome editor tab. Now select the file JanesINIFile.ini in the 
-  Navigator view. Then select the Link to Editor button on the Navigator view. 
+  Navigator view. Then select the Link with Editor button on the Navigator view. 
   Lastly, click on the editor tab for JanesFile.txt. Notice how the Navigator 
   updated itself to select the file you are currently editing (JanesFile.txt). 
   If you don't like this automatic update you can easily turn it off by deselecting 
-  the Link to Editor button.</P>
+  the Link with Editor button.</P>
 
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
