--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -11,23 +11,23 @@
 <h3>
  Export wizard</h3>
 <P CLASS="Para">
-You can use the export wizard to export from the Workbench to the file system.</P>
+You can use the Export wizard to export from the Workbench to the file system.</P>
 <ol>
   <li>
 <P CLASS="Para">
-Select the project JaneQUser in the Navigator. </P>
+Select the project JaneQuser in the Navigator. </P>
   </li>
   <li>
-    <P CLASS="Para"> From the popup, select File &gt; Export.</P>
+    <P CLASS="Para"> From the popup menu, select Export.</P>
   </li>
   <li>
 <P CLASS="Para">
-In the export wizard, select File System, then click Next.</P>
+In the Export wizard, select File system, then click Next.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image42_export.jpg" alt="Export Wizard" width="469" height="548" ></P>
   </li>
   <li>
-<p class="Para">Expand JaneQUser project, and click on JanesFolder. In the right
+<p class="Para">Expand JaneQuser project, and click on JanesFolder. In the right
 pane ensure that only JanesINIFile.ini is checked.&nbsp; Notice the folder and
 project in the left pane now have a grayed checkbox indicating that some, but
 not all, of their contents will be exported.</p>
@@ -35,7 +35,7 @@ not all, of their contents will be exported.</p>
 resources you want to export.</p>
 <p class="Para">If we had known ahead of time that we only wanted to export
 JanesINIFile.ini we could have simply selected it in the Navigator and chosen
-File &gt; Export. The export wizard would have automatically ensured it was the
+File &gt; Export. The Export wizard would have automatically ensured it was the
 only file checked for export.</p>
 <p class="Para">
 <img align="texttop" border="0" src="../images/Image43_export_tree.jpg" alt="Export Wizard" width="559" height="578" ></p>
@@ -44,7 +44,7 @@ only file checked for export.</p>
     <P CLASS="Para"> In the <i> To directory</i> field, type or browse to select 
       a location in the file system where you want the exported resources to reside.</P>
 <P CLASS="Para">
-If you enter the name of a directory that does not exist the export wizard will
+If you enter the name of a directory that does not exist the Export wizard will
 offer to create it for you once you press Finish.</P>
   </li>
   <li>
