--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -39,9 +39,8 @@ Drag the file over JaneQUser2 and release the mouse button.</P>
 <P CLASS="Para">
 Notice that the file is copied into the Workbench and placed into JaneQUser2.</P>
   </li>
-  <li>This can also be achieved by copying the file in the system's file explorer,
-then selecting the destination in the Navigator and&nbsp;
-<p>choosing Edit &gt; Paste.
+  <li>This can also be achieved by copying the file in the file system explorer,
+then selecting the destination in the Navigator and choosing Edit &gt; Paste.
   </li>
 </ol>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
