--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -22,15 +22,15 @@ Select the project JaneQuser.</p>
   </li>
   <li>
 <P CLASS="Para">
-In the Import wizard, select File System, then click Next.</P>
+In the Import wizard, select File system, then click Next.</P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image38_import.jpg" alt="Import Wizard" width="470" height="550"></P>
   </li>
   <li>
 <P CLASS="Para">
-In the <i> Directory </i> field, type or browse to select the directory
-containing the file JanesINIFile.ini that we recently exported.&nbsp;</P>
-<P CLASS="Para">Recent directories that you have imported from are shown on the <i>Directory</i>
+In the <i> From directory </i> field, type or browse to select the directory
+containing the file JanesINIFile.ini that we recently exported.</P>
+<P CLASS="Para">Recent directories that you have imported from are shown on the <i>From directory</i>
 field's combo box.</P>
 <blockquote>
   <P CLASS="Para">&nbsp;<img align="texttop" border="0" src="../images/Image41_import_combo.jpg" alt="Import Wizard" width="518" height="45"></P>
@@ -47,7 +47,7 @@ files in the folder will be imported into the Workbench.</P>
   </li>
   <li>
     <P CLASS="Para"> The <i>Into folder</i> field should already be filled in 
-      with the name of the project (JaneQUser).&nbsp; </P>
+      with the name of the project (JaneQuser).&nbsp; </P>
   </li>
   <li>
 <P CLASS="Para">You can change the destination project or folder by clicking
