Update known problem for Help

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -439,7 +439,7 @@ preference if it is. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=
 <h3>Platform - Text</h3>
 <p>[TBD]</p>
 <h3>Platform - Compare</h3>
-<p>[TBD]</p>
+<p>None.</p>
 <h3>JDT - Core</h3>
 <h4>Multiple output folders</h4>
 <p>In Eclipse 2.0, all generated class files (and copied resource files) for a
@@ -679,68 +679,47 @@ required and can cause problems. The Xerces classes are loaded from the
 org.apache.xerces plug-in provided with Eclipse. (bugs <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33664">33664</a>,
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=33117">33117</a>)</p>
 <p>[TBD]</p>
-<h3>3.1.3 <a name="I-Platform - Help">Platform - Help</a></h3>
-<h4><font color="#00FF00">Help documents not displayed in a browser or very slow
+<h3><font color="#000000">3.1.3 <a name="I-Platform - Help">Platform - Help</a></font></h3>
+<h4><font color="#000000">Help documents not displayed in a browser or very slow
 document loading (Windows only)</font></h4>
-<font color="#00FF00">If your LAN settings are not properly configured for local
+<font color="#000000">If your LAN settings are not properly configured for local
 host access, your Help browser might open to a blank page or display an HTTP
 error instead of a help page, or you may experience long delays when loading
 help documents. Your system administrator can configure your LAN settings so
 that help documents can be accessed from the local help server.</font>
 <blockquote>
   <ol>
-    <li><font color="#00FF00">In the Control Panel, open <b>Internet Options</b>,
+    <li><font color="#000000">In the Control Panel, open <b>Internet Options</b>,
       select the <b>Connections</b> tab and choose <b>LAN Settings</b>.</font></li>
-    <li><font color="#00FF00">If your host was configured to use DHCP for IP
+    <li><font color="#000000">If your host was configured to use DHCP for IP
       assignment, make sure that the &quot;Automatically detect settings&quot;
       check box is cleared.</font></li>
-    <li><font color="#00FF00">If you use proxy server, ensure that the
+    <li><font color="#000000">If you use a proxy server, ensure that the
       &quot;Bypass proxy server for local addresses&quot; is selected.</font></li>
-    <li><font color="#00FF00">In &quot;Advanced&quot; settings for proxies, add
+    <li><font color="#000000">In &quot;Advanced&quot; settings for proxies, add
       &quot;127.0.0.1;localhost&quot; to the &quot;Exceptions&quot; if these
       addresses are not listed.</font></li>
-    <li><font color="#00FF00">If you are using an automatic configuration script
+    <li><font color="#000000">If you are using an automatic configuration script
       for proxy settings, and are not sure that the script is correct, clear the
       &quot;Use automatic configuration script&quot; check box.</font></li>
   </ol>
 </blockquote>
-<p><font color="#00FF00">If the above steps do not fix your problem, try
-changing the port and host properties in <code>org.eclipse.tomcat\preferences.ini</code>.
-In general, setting <code>host=localhost</code> or <code>host=127.0.0.1</code>
-should work. Also, especially when running a firewall, you may want to set <code>port=80</code>
-or some other firewall-friendly value. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=7036">bugs
+<p><font color="#000000">If the above steps do not fix your problem, try
+changing the port and host properties on the <b>Help &gt; Help Server</b>
+preference page. In general, setting <code>host</code> to <code>localhost</code>
+or <code>127.0.0.1</code> should work. Also, especially when running a firewall,
+you may want to specify port 80 or some other firewall-friendly value. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=7036">bugs
 7036</a>, <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=9418">9418</a>, <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=11394">11394</a>)</font></p>
-<h4><font color="#00FF00">Working disconnected from the network (Windows only)</font></h4>
-<font color="#00FF00">If you are experiencing problems when not connected to the
-network you must install the loopback adapter from the Windows installation CD.
+<h4><font color="#000000">Working disconnected from the network (Windows only)</font></h4>
+<font color="#000000">If you are experiencing problems when not connected to the
+network, you must install the loopback adapter from the Windows installation CD.
 (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=831">bug 831</a>)</font>
-<h4><font color="#00FF00">Using Internet Explorer in offline mode (Windows only)</font></h4>
-<font color="#00FF00">If you have been using Internet Explorer in Offline mode,
-when you access the help system, you will get a message indicating that the web
-page you requested is not available offline. Click <b>Connect</b> to return the
-system behavior to normal.</font>
-<h4><font color="#00FF00">Opening and navigating Help produces clicking sound
-(Windows only)</font></h4>
-<font color="#00FF00">Internet Explorer has a sound event associated with
-navigate events. To turn this sound off, go to <b>Control Panel -&gt; Sounds
--&gt;Windows Explorer </b>and change the sound for &quot;Start Navigation&quot;
-to &quot;none&quot; in the menu box. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=16081">bug
-16081</a>)</font>
-<h4><font color="#00FF00">Keyboard navigation in help using Mozilla</font></h4>
-<font color="#00FF00">Accessibility support is limited in pre-1.0 releases of
-the Mozilla browser. If you need to navigate help using the keyboard, you must
-upgrade to Mozilla version 1.0. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=15018">bug
-15018</a>)</font>
-<h4><font color="#00FF00">Searching help produces unexpected results and
-highlights incomplete words</font></h4>
-<font color="#00FF00">For some languages, a stemming algorithm is used to
-enhance the chance of a search hit. For these languages, the word roots are
-searched for; exact searches are not supported.&nbsp; As such, the result set
-contains documents with variations of the search query words, and only the
-common roots are highlighted in the document. Stemming and stop word removal
-also applies to search query terms enclosed in quotation marks (&quot;), so the
-search results will not be an exact match of the quoted string. (<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=17030">bug
-17030</a>)</font>
+<h4><font color="#000000">Using Internet Explorer in offline mode (Windows only)</font></h4>
+<font color="#000000">If you have been using Internet Explorer in Offline mode,
+when you access the help system you will get a message indicating that the web
+page you requested is not available offline or a blank page will display. Click <b>Connect</b>
+or deselect &quot;Work Offline&quot; in the Internet Explorer &quot;File&quot;
+menu to return the system behavior to normal.</font>
 <h3>3.1.4 <a name="I-Platform - UI">Platform - UI</a></h3>
 <h4><font color="#00FF00">Manual refresh required when files modified outside
 Eclipse</font></h4>
