*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -206,7 +206,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Customizable error indicators</b></TD>
+    <TD vAlign=top width="30%"><b>Customizable error indicators</b></TD>
     <TD vAlign=top width="70%">
       <p>The Java editor now offers improved customizability for the visual appearance 
         of errors, warning, tasks, etc. These preference settings are found on 
@@ -796,24 +796,6 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       is on the <B>Java / Compiler</B> preference page. 
       <P><IMG 
       src="images/warn-privates.gif"></P></TD></TR>
- <TR>
-    <TD colSpan=2>
-      <HR>
-    </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B>Package Explorer 
-      improvements</B> </P></TD>
-    <TD width="70%">Non-Java projects are now 
-      presented in the Package Explorer view. A filter is provided to filter out 
-      non-Java projects, and the open/close interaction is now consistent with 
-      the resource Navigator view. 
-      <P><IMG 
-      src="images/package-explorer.gif" border=0></P>
-      <P>Libraries (such as the JRE system library) 
-        are now presented as a single node with one or more JARs as children. 
-      </P>
-    </TD></TR>
 	<TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
@@ -837,7 +819,25 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top width="70%">In addition to workspace-wide Java compiler settings 
       (<b>Java / Compiler</b>), you can now configure these for a specific Java 
       project through the new Java Compiler property page on each Java project.</TD>
-  </TR>	
+ </TR>
+ <TR>
+    <TD colSpan=2>
+      <HR>
+    </TD></TR>
+  <TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B>Package Explorer 
+      improvements</B> </P></TD>
+    <TD width="70%">Non-Java projects are now 
+      presented in the Package Explorer view. A filter is provided to filter out 
+      non-Java projects, and the open/close interaction is now consistent with 
+      the resource Navigator view. 
+      <P><IMG 
+      src="images/package-explorer.gif" border=0></P>
+      <P>Libraries (such as the JRE system library) 
+        are now presented as a single node with one or more JARs as children. 
+      </P>
+    </TD></TR>
   <TR>
     <TD vAlign=top colSpan=2>
       <HR>
