--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -119,7 +119,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         <LI>Remove a catch clause to deal with an exception no longer thrown</LI>
         <LI>Add unimplemented abstract methods</LI>
       </UL>
-      <P>Other compiler-detected problems that can be fixed using Quick Fix nclude:</P>
+      <P>Other compiler-detected problems that can be fixed using Quick Fix include:</P>
       <ul>
         <li>Instance variable used in a static context</li>
         <li>Declaration of an abstract method in a non-abstract type</li>
@@ -151,9 +151,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
             the source file. </P>
         <LI>Move catch block to throws declaration: 
           Available on the catch statement. 
-        <LI>Assign expression statements to a local 
-          variable or field: Available on all expression statements. e.g.:&nbsp; 
-          <TT>&nbsp;&nbsp;<code> vector.iterator();</code></TT> 
+        <LI>Assign expression statements to a local variable or field: Available 
+          on all expression statements. E.g.:&nbsp; <TT>&nbsp;&nbsp;<code> vector.iterator();</code></TT> 
           <BR>
           will be transformed to<BR>
           <TT>&nbsp;&nbsp; </TT><code>Iterator iterator= vector.iterator();</code> 
@@ -241,11 +240,11 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
 
-    <TD vAlign=top align=left width="30%"><b>Hyperlinked Java code</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Hyper-linked Java code</b></TD>
     <TD vAlign=top width="70%"> 
       <p>While hovering over Java code, pressing the Ctrl key and moving the mouse 
         turns class, method, and field identifiers into clickable links to the 
-        corresponding declaration. This option can be confugured via the <b>Java 
+        corresponding declaration. This option can be configured via the <b>Java 
         / Editor / Navigation</b> panel.</p>
       <p><img src="images/hyperlinking.gif"></p>
     </TD>
