Incorrect extension point name

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -30,7 +30,7 @@ plug-in.&nbsp; (See
 for more information.)</p>
 
 
-<p> The <b><a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">org.eclipse.ant.core.antTask</a></b> extension point provides an example of how to specify
+<p> The <b><a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">org.eclipse.ant.core.antTasks</a></b> extension point provides an example of how to specify
 a new task 
 in the <b>plugin.xml</b> file.</p>
 
