--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -21,7 +21,7 @@
         Optionally, select the project or source folder where you want the package to reside.
       </li>
       <li>
-        Click the <strong>Create a Java Package</strong> button in the workbench toolbar. The New Java Package wizard opens.
+        Click the <strong>New Java Package</strong> button in the workbench toolbar. The New Java Package wizard opens.
       </li>
       <li>
         Edit the&nbsp;<strong><strong>Source Folder</strong></strong> field to indicate in which container you want the new package to reside. You can either type a path or
