--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-164.htm
@@ -17,7 +17,7 @@
     </p>
     <ul>
       <li>
-        In the Java editor, select the expression with which the local variable is initiated
+        In the Java editor, select the expression with which the local variable is initialized
       </li>
       <li>
         Invoke the Extract Method refactoring by either: 
@@ -40,10 +40,10 @@
         Invoke the Inline Local Variable by either: 
         <ul>
           <li>
-            Selecting <strong>Refactor &gt; Inline Local Variable</strong> from the editor's pop-up menu or
+            Selecting <strong>Refactor &gt; Inline...</strong> from the editor's pop-up menu or
           </li>
           <li>
-            Selecting <strong>Refactor &gt; Inline Local Variable</strong> from the menu bar
+            Selecting <strong>Refactor &gt; Inline...</strong> from the menu bar
           </li>
         </ul>
       </li>
