--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -48,15 +48,12 @@
     <p>
       The template edit mode is left by either pressing <kbd>Tab</kbd> on the last template variable or pressing <kbd>Esc</kbd> or <kbd>Enter</kbd>.
     </p>
-    <p>&nbsp;
-      
-    </p>
     <p>
       Example:
     </p>
     <ul>
       <li>
-        Create a method <code>void m(int [] foos){}</code> and position the caret inside the method.
+        Create a method <code>void m(int[] intarray){}</code> and position the caret inside the method.
       </li>
       <li>
         Type <code>for</code> and press <kbd>Ctrl+Space</kbd> to open Code Assist
@@ -65,17 +62,17 @@
         Select the first entry from the list (i.e.<strong>for - iterate over array</strong>). Note the template preview window.
       </li>
       <li>
-        Note also that the name of the array (i.e. <code>foos</code>) is automatically detected.
+        Note also that the name of the array (i.e. <code>intarray</code>) is automatically detected.
       </li>
       <li>
-        The local variable <code>i</code> is now selected (your are in the template edit mode) - you can type another name for it. Notice that the name is updated instantaneously
-        everywhere where the local variable is used.
+        The local variable <code>i</code> is now selected and you are in the template edit mode.
+		Typing another name instantaneously updates all occurrences of it.
       </li>
       <li>
         Press <kbd>Tab</kbd>. You can now modify the suggested name for the array (pressing <kbd>Shift-Tab</kbd> will let you modify the name of the local variable again).
       </li>
       <li>
-        To leave the template edit mode you can: 
+        To leave the template edit mode
         <ul>
           <li>
             press <kbd>Tab</kbd> or <kbd>Enter</kbd>, which will move the caret so that you can enter the body of the newly created loop or
