Renamed Ant preference reference doc

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -37,7 +37,7 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-89.htm">Running Ant build files</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
-<br><a href="../reference/rantprefs.htm">Ant</a>
+<br><a href="../reference/ref-antprefs.htm">Ant</a>
 </p>
 <p>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
