Renamed Ant support concept doc

--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -215,7 +215,7 @@ selected.
 </p>
 
 <p><br><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
-<br><a href="cantsup.htm">Ant support</a>
+<br><a href="concepts-antsupport.htm">Ant support</a>
 <br><a href="concepts-22.htm">Builds</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 >
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
