--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -35,7 +35,7 @@ go to the <b>Run &gt; External Tools</b> menu.
 </p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/cantsup.htm">Ant support</a><br>
+<a href="../concepts/concepts-antsupport.htm">Ant support</a><br>
 <a href="../concepts/concepts-22.htm">Builds</a><br>
 <a href="../concepts/cexttools.htm">External tools</a>
 </p>
