Renamed Ant add tasks and types task doc

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -44,7 +44,7 @@ go to the <b>Run &gt; External Tools</b> menu.
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
 <a href="../tasks/tasks-85.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
-<a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
+<a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new tasks and types</a><br>
 </p>
 
 <p>&nbsp;<br>
