--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
@@ -57,6 +57,13 @@ editors. If you choose File &gt; Close All, you will be prompted to choose which
 editors with unsaved changes you want to save.
 </P>
 
+<P>If you choose Window &gt; Preferences then Workbench &gt; Editors, you will
+find the preference to close editors automatically. There you can configure
+how many editors are opened before editors are reused and what should happen when
+all editors have unsaved changes.
+</P>
+
+
 
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
