Fixed minor typographical errors

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35b.htm
@@ -11,13 +11,13 @@
 <h3>
 Copying</h3>
 <p CLASS="Head">
-Let's start by copying JanesFile.txt to our new&nbsp; folder (JanesOtherFolder).
+Let's start by copying JanesFile.txt to our new folder (JanesOtherFolder).
 Once we have copied our file we will then rename it.</p>
 <ol>
   <li>
 <p CLASS="Head">
 Ensure that you have performed the setup described in the
-introduction to this <a href="qs-35.htm#setup">section</a>.&nbsp;</p>
+introduction to this <a href="qs-35.htm#setup">section</a>.</p>
   </li>
   <li>
 <p CLASS="Para">
