--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -14,15 +14,16 @@
 
 <ol>
 	<li>In the Workbench toolbar, click the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg" alt="Search button" width="20" height="19" >.</li>
-	<li>In the Search Expression field, type in: <i>it.</i>
+	<li>In the <i>Containing text</i> field, type in: <i>it</i>
 		<br>
-    The combo box for the<em> Containing Text</em> field also lets you select 
+    The combo box for the<em> Containing text</em> field also lets you select 
     from a list of recently performed searches.<br>
     <img align="texttop" border="0" src="../images/Image51_search_it.jpg" alt="Search dialog" width="488" height="378" ></li>
 	<li>You can select or deselect the <i> Case sensitive</i> check box depending on whether or not you want to perform a case sensitive or insensitive search.
-		<br>We want to search for lowercase &quot;<i>it&quot;</i> so check the <i>Case sensitive </i>box.</li>
+		<br>We want to search for lowercase &quot;<i>it</i>&quot; so check the <i>Case sensitive </i>box.</li>
 	<li>In the <i>File name patterns</i> field you can specify the kinds of files to include in your search.
-		<br>Click Browse... to open the Type Selection Dialog. This dialog provides you with a quick way to select from a&nbsp; list of registered extensions. <blockquote><img align="texttop" border="0" src="../images/Image51_choose_ext.jpg" alt="Type Selection Dialog" width="343" height="458" ></blockquote> For the moment we will confine our search to .txt files. Ensure .txt is checked and click OK.</li>
+		<br>Click Browse... to open the <i>Select Types</i> dialog. This dialog provides you with a quick way to select from a list of registered extensions. <blockquote><img align="texttop" border="0" src="../images/Image51_choose_ext.jpg" alt="Type Selection Dialog" width="343" height="458" ></blockquote> 
+		For the moment we will confine our search to .txt files. Ensure *.txt is checked and click OK.</li>
 	<li>In the Scope field you can specify the files and folders to include in the search. The choices are: the entire workspace, the currently selected resources in the Workbench, or a working set which is a named, customized group of files and folders. Leave the scope as workspace.</li>
 	<li>The Customize button allows you to choose what kinds of searches are available in the dialog. This setting may be left unchanged.</li>
 	<li>Click Search.
