--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Associated Tasks</h3>
+Associated tasks</h3>
 <P CLASS="Para">
 Associated tasks are associated with a specific location in a resource. To
 associate a task with our&nbsp;JanesFile.txt:</P>
@@ -32,7 +32,7 @@ associate a task with our&nbsp;JanesFile.txt:</P>
     <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image53_marker1.jpg" alt="Marker bar menu" width="420" height="200"></P>
   </li>
   <li> 
-    <P CLASS="Para"> In the Enter Task Description field, type a brief description 
+    <P CLASS="Para"> In the <i>Description</i> field, type a brief description 
       for the task you want to associate with that line in the text file.</P>
     <blockquote> 
       <P CLASS="Para"> <img align="texttop" border="0" src="../images/Image53_add_task_dlg.jpg" alt="Add Task dialog" width="609" height="248"></P>
@@ -62,11 +62,11 @@ associate a task with our&nbsp;JanesFile.txt:</P>
       is saved.&nbsp;</P>
   </li>
   <li> 
-    <P CLASS="Para"> In the marker bar, access the context menu from the task 
+    <P CLASS="Para"> In the Tasks view, access the context menu for the task 
       you just created.</P>
   </li>
   <li> 
-    <P CLASS="Para"> From the marker's context menu, select Mark Completed. </P>
+    <P CLASS="Para"> Select Mark Completed. </P>
   </li>
   <li>Now select Delete Completed Tasks from the marker's context menu.</li>
   <li> 
