--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
@@ -23,6 +23,9 @@ In the Bookmarks view, select JanesFile.txt (the second bookmark we created) and
   </li>
   <li>
     From the bookmark's context menu choose delete.</li>
+  <li>
+    Hit the Delete key on your keyboard.</li>
+  
 </ul>
 <P CLASS="Para">
 Notice that the bookmark is removed from the Bookmarks view.</P>
@@ -51,7 +54,7 @@ will allow us to watch the editor update as we delete the bookmark.</P>
   </li>
   <li>
 <p CLASS="Head">In the Bookmarks view, select JanesFile.txt (the remaining
-bookmark). Click the&nbsp; Delete&nbsp; button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="Bookmark delete button" width="19" height="19">
+bookmark). Click the&nbsp; Delete button <img align="texttop" border="0" src="../images/Image54_bookmark_del1.jpg" alt="Bookmark delete button" width="19" height="19">
     on the view's toolbar.
 Notice that the bookmark is removed from the Bookmarks view and the
 JanesFile.txt editor.&nbsp; </p>
