--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -63,7 +63,7 @@ Dock to the left: if you release the mouse button when a dock to the left cursor
 <img align="texttop" border="0" src="../images/drop_stack.gif"  alt="Stack icon">
 </TD>
 <TD height="38" valign="top" align="left">
-Stack: if you release the mouse button when a stack cursor is displayed, the view will appear as a Tab in the same pane as the view underneath the cursor.
+Stack: if you release the mouse button when a stack cursor is displayed, the view will appear as a tab in the same pane as the view underneath the cursor.
 </TD>
 </TR>
 <TR>
