--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39d.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Rearranging Views</h3>
+Rearranging views</h3>
 <p CLASS="Head">
 We can change the position of our Navigator view in the Workbench
 window.</p>
