--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Tiling Editors</h3>
+Tiling editors</h3>
 <P CLASS="Para">
 The Workbench allows you to create two or more sets of editors in the editor
 area. You can also resize the editor area but you cannot drag views into the editor
