--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -30,7 +30,7 @@ Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
   </li>
   <li>
   <p CLASS="Head">You can use the Navigator fast view as you would normally.&nbsp;&nbsp;To resize
-a fastview, move the mouse to the right edge of the fastview where the cursor
+a fast view, move the mouse to the right edge of the fast view where the cursor
 will change to a double-headed arrow. Then hold the left
 mouse button down as you move the mouse. </p>
   </li>
@@ -55,6 +55,10 @@ the fast view will automatically hide itself to allow you to work with the file.
   </li>
   <li>Choose Fast View from the context menu of the icon in the top left corner of
     the view. </li>
+  <li>Drag the fast view icon from the tool bar, and drop it somewhere in the Workbench
+  window.
+  </li>
+  
 </ul>
 
 
