--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
@@ -21,12 +21,12 @@ Workbench window.&nbsp;&nbsp;</p>
     In a new Workbench window</p>
 </ul>
 <p class="Para" Type Label>Perspectives define visible action sets, which you
-can change to customize a perspective.&nbsp; You can save a perspective that you
+can change to customize a perspective. You can save a perspective that you
 build in this manner, making your own custom perspective that you can open again
 later.&nbsp;&nbsp;</p>
 <P CLASS="Para">
  The Workbench window displays one or more perspectives. Initially one perspective,
- the Resource perspective,&nbsp; is displayed. A perspective consists of views
+ the Resource perspective, is displayed. A perspective consists of views
  like the Navigator as well as editors for working with resources.
 More than one Workbench window can be open at any given time.&nbsp; </P>
 <P CLASS="Para">
