--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
@@ -47,7 +47,7 @@ can also control several other key aspects of a perspective. These include:</p>
       </li>
   <li>
         <p CLASS="Para">When you have finished
-        experimenting with the other options on the Customize Perspective dialog choose
+        experimenting with the other options on the Customize Perspective dialog, choose
         Window &gt; Reset Perspective to return the perspective to its original
         state.&nbsp; </p>
       </li>
