--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -11,9 +11,9 @@
 
 <h3>The Search view&nbsp;</h3>
 
-<p>Now that we have completed our searched for &quot;it&quot; the
+<p>Now that we have completed our search for &quot;it&quot; the
 Search view is visible. The
-title of the Search view shows that 4 matches were found.&nbsp;</p>
+title of the Search view shows that four matches were found.&nbsp;</p>
 <blockquote>
   <p>
   <img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" width="420" height="152" >&nbsp;&nbsp;</p>
@@ -24,7 +24,7 @@ there were 2 matches found.&nbsp; Let's take a more detailed look at the Search
 view.&nbsp;</p>
 
 <ol>
-	<li>The title of the search view provides us with a description of the search we just performed. If the view is too narrow to display the full description, hover over the title of the Search view. Observe that hover help appears and provides the full description.<blockquote><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></blockquote></li>
+	<li>The title of the Search view provides us with a description of the search we just performed. If the view is too narrow to display the full description, hover over the title of the Search view. Observe that hover help appears and provides the full description.<blockquote><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></blockquote></li>
 	<li>Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Show next match button" width="23" height="18" > to navigate to the first match of the search expression (&quot;it&quot;).
 		<br>Notice that the file JanesText.txt is automatically selected and opened in the editor area.
 		<br>Click Show Next Match button two more times. Once again the Search view automatically opens the file.</li>
@@ -40,8 +40,8 @@ view.&nbsp;</p>
 		<br>The Search view now shows only one match for JanesFile.txt <blockquote><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" width="425" height="150" ></blockquote></li>
 	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" width="20" height="19" > in the Workbench's toolbar.</li>
 	<li>The Search view updates to show the results of the new search.
-		<br>You can move back and forth between your two search results using the drop down button on the Search views toolbar. <blockquote><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view" width="597" height="152"></p></blockquote></li>
-	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose Search Again to repeat the initial search. Notice that once again we have 4 matches.</li>
+		<br>You can move back and forth between your two search results using the drop down button on the Search view;s toolbar. <blockquote><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view" width="597" height="152"></p></blockquote></li>
+	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose Search Again to repeat the initial search. Notice that once again we have four matches.</li>
 </ol>
 
 
