--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2b.htm
@@ -16,8 +16,7 @@ breakpoints and problems. In this section we will focus on tasks and the Tasks
 view.</P>
 <P CLASS="Para">
 The Tasks view displays all the tasks and problems in the Workbench.  It allows us to view those associated with specific files, specific lines in specific files, 
-as well as&nbsp; generic
-tasks that are not associated with any specific file.</P>
+as well as generic tasks that are not associated with any specific file.</P>
 <P CLASS="Para">
 In the figure below &quot;sample task&quot; is a generic task not associated
 with any specific resource. The second task (&quot;add sixth line to the
