--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
@@ -37,14 +37,13 @@ supports two additional ways to open the file associated with a selected bookmar
   <li>From the bookmark's context menu choose Go To&nbsp;</li>
   <li>From the view's toolbar click on the Go To toolbar button <img align="texttop" border="0" src="../images/Image54_bookmark_goto.jpg" alt="Bookmark goto button" width="25" height="21"></li>
 </ol>
-<P>The Bookmark's view allows you to select the associated file in the
-Navigator.&nbsp;&nbsp;
+<P>The Bookmarks view allows you to select the associated file in the Navigator.
 </P>
 
 
 <ol>
   <li>In the Bookmarks view, select My Bookmark.</li>
-  <li>From the bookmark's context menu choose Show In Navigator. </li>
+  <li>From the bookmark's context menu choose Show in Navigator. </li>
   <li>
 <P CLASS="Para">
 Notice that the Navigator view is now visible and the file JanesFile.txt is
@@ -54,8 +53,8 @@ associated with.</P>
 </ol>
 
 
-<P> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
-  \ </P>
+<P> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</P>
 
 
 </BODY>
