--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -17,13 +17,13 @@ how to use the view once it is a fast view.&nbsp;</p>
 <ul>
   <li>
     Using drag and drop</li>
-  <li> Using a&nbsp; menu operation available from the view System menu.</li>
+  <li> Using a menu operation available from the view System menu.</li>
 </ul>
 <p CLASS="Head">Let's start by creating a fast view using drag and drop.</p>
 <ol>
   <li>
 <P CLASS="Para">
-In the Navigator view&nbsp;click on the title bar and drag it to the
+In the Navigator view click on the title bar and drag it to the
 shortcut bar at the far left of the window.&nbsp;</P>
   </li>
   <li>
