--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -51,7 +51,7 @@ this Workbench window:</p>
             Debug perspective.&nbsp;</li>
           <li>
             <p CLASS="Para">The shortcut bar now contains two perspectives, the original
-            Resource perspective and the new Debug perspective.&nbsp;The Debug perspective button is pressed-in indicating that it is the
+            Resource perspective and the new Debug perspective.&nbsp;The Debug perspective button is pressed in, indicating that it is the
             current perspective.<br>
             <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" alt="Debug Perspective" width="139" height="183"></li>
         </ul>
